testData/org/elixir_lang/annotator/module_attribute/issue_632.ex
@type unity <error descr="Float literals are not allowed in types: use float() instead">1.0</error>
@type percentage_change -100.0..<error descr="Floats aren't allowed in Ranges">100.0</error>
